# jettyOrders-Delivery

./: .gitignore  AgentMemory.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Account.tsx  AddMenuItem.tsx  AddRestaurant.tsx  AddResturant.tsx  MarketingCarousel.tsx  MenuItems.tsx  Navbar.tsx  OrderCard.tsx  ProtectedRoute.tsx  PublicRoute.tsx  RestaurantCard.tsx  RestaurantCarousel.tsx  RestaurantOrders.tsx  RestaurantProfile.tsx  RestuarantCard.tsx  RestuarantOrder.tsx  RestuarantProfile.tsx  publicRoute.tsx
frontend/src/context/: AppContext.tsx  CartContext.tsx  SocketContext.tsx
frontend/src/pages/: Address.tsx  BrowseMenu.tsx  Cart.tsx  Checkout.tsx  Homepage.tsx  Login.tsx  MyOrders.tsx  Order.tsx  OrderConfirmation.tsx  PublicMenu.tsx  ResetPassword.tsx  RestaurantDashboard.tsx  RestaurantMenu.tsx  Restuarant.tsx  RestuarantPage.tsx  SelectRole.tsx  SellerOrders.tsx
frontend/src/services/: addressService.ts  aiService.ts  api.ts  authService.ts  cartService.ts  menuService.ts  orderService.ts  paymentService.ts  realtimeService.ts  restaurantService.ts
frontend/src/types/: types.ts
services/ai/: pyproject.toml
services/ai/src/: agents.py  config.py  main.py
services/auth/: package-lock.json  package.json
services/auth/src/: index.ts
services/realtime/: package-lock.json  package.json
services/restaurant/: package-lock.json  package.json
services/rider/: package-lock.json  package.json  tsconfig.json
services/utils/: package-lock.json  package.json
(+45 files in other folders)
