[project]
name = "jetty-orders-ai"
version = "0.1.0"
description = "AI service for JettyOrders — dish suggestions, restaurant recommendations, review generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-groq>=0.2",
    "langsmith>=0.3",
    "pydantic>=2",
    "pydantic-settings>=2",
]
